unpackaged/main/default/objects/Product2/fields/Administrador_del_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Administrador_del_Contrato__c</fullName>
    <label>Administrador del Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>Compra local por Unidades Médicas</fullName>
            </value>
            <value>
                <fullName>Subdirección de Infraestructura</fullName>
            </value>
            <value>
                <fullName>Subdirección de Prevención y Protección a la Salud</fullName>
            </value>
            <value>
                <fullName>Subdirección de Regulación y Atención Hospitalaria</fullName>
            </value>
            <value>
                <fullName>#N/D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>