unpackaged/main/default/objects/Product2/fields/BP_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>BP_Product_Code__c</fullName>
    <label>BP Product Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>