unpackaged/main/default/objects/Product2/fields/Cat_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Cat_Product_Id__c</fullName>
    <label>Cat Product Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>