unpackaged/main/default/objects/Product2/fields/Descripcion_de_la_Partida__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_la_Partida__c</fullName>
    <label>Descripción de la Partida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>