unpackaged/main/default/objects/Product2/fields/Dias_de_Vida_Util__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_Vida_Util__c</fullName>
    <label>Días de Vida Útil</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>