unpackaged/main/default/objects/Product2/fields/Enable__c.field-meta.xml
<CustomField>
    <fullName>Enable__c</fullName>
    <label>Enable</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>