unpackaged/main/default/objects/Product2/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Censo</fullName>
            </value>
            <value>
                <fullName>Censo DPN</fullName>
            </value>
            <value>
                <fullName>Consumible</fullName>
            </value>
            <value>
                <fullName>Consumo</fullName>
            </value>
            <value>
                <fullName>Material de Curación</fullName>
            </value>
            <value>
                <fullName>Material de Laboratorio</fullName>
            </value>
            <value>
                <fullName>Material Radiológico</fullName>
            </value>
            <value>
                <fullName>Medicamento</fullName>
            </value>
            <value>
                <fullName>Ropa Quirúrgica Desechable</fullName>
            </value>
            <value>
                <fullName>#N/D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>