unpackaged/main/default/objects/Product2/fields/Fraction__c.field-meta.xml
<CustomField>
    <fullName>Fraction__c</fullName>
    <label>Fraction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Controlado 1</fullName>
            </value>
            <value>
                <fullName>Controlado 2</fullName>
            </value>
            <value>
                <fullName>Controlado 3</fullName>
            </value>
            <value>
                <fullName>No Controlado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>