unpackaged/main/default/objects/Product2/fields/Grupo_Terapeutico_y_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Terapeutico_y_Nombre__c</fullName>
    <label>Grupo Terapéutico y Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>