unpackaged/main/default/objects/Product2/fields/Nivel_de_Atencion__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Atencion__c</fullName>
    <label>Nivel de Atención</label>
    <length>255</length>
    <type>Text</type>
</CustomField>