unpackaged/main/default/objects/Product2/fields/Package_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Package_Capacity__c</fullName>
    <label>Package Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>