unpackaged/main/default/objects/Product2/fields/Partida_Presupuestal__c.field-meta.xml
<CustomField>
    <fullName>Partida_Presupuestal__c</fullName>
    <label>Partida Presupuestal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>