unpackaged/main/default/objects/Product2/fields/Product_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Clave</inlineHelpText>
    <label>Product Code ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>