unpackaged/main/default/objects/Product2/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programa</label>
    <referenceTo>Programas__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>