unpackaged/main/default/objects/Product2/fields/Reporte_de_Ceros__c.field-meta.xml
<CustomField>
    <fullName>Reporte_de_Ceros__c</fullName>
    <label>Reporte de Ceros</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>#N/D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>