unpackaged/main/default/objects/Product2/fields/Sicora_Classification__c.field-meta.xml
<CustomField>
    <fullName>Sicora_Classification__c</fullName>
    <label>Sicora Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGULAR</fullName>
            </value>
            <value>
                <fullName>HIGH VALUE</fullName>
            </value>
            <value>
                <fullName>HIGH_VALUE</fullName>
                <isActive>false</isActive>
                <label>HIGH_VALUE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>