unpackaged/main/default/objects/Product2/fields/Simple_Classification__c.field-meta.xml
<CustomField>
    <fullName>Simple_Classification__c</fullName>
    <label>Simple Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MEDICINE</fullName>
            </value>
            <value>
                <fullName>HEALING MATERIAL</fullName>
            </value>
            <value>
                <fullName>HEALING_MATERIAL</fullName>
                <isActive>false</isActive>
                <label>HEALING_MATERIAL</label>
            </value>
            <value>
                <fullName>HIGH VALUE</fullName>
                <isActive>false</isActive>
                <label>HIGH VALUE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>