unpackaged/main/default/objects/Product2/fields/Subalmacen__c.field-meta.xml
<CustomField>
    <fullName>Subalmacen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subalmacen</label>
    <referenceTo>Subalmacen__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>