unpackaged/main/default/objects/Product2/fields/Tipo_de_Insumo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Insumo__c</fullName>
    <label>Tipo de Insumo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>