unpackaged/main/default/objects/Product2/fields/U_P__c.field-meta.xml
<CustomField>
    <fullName>U_P__c</fullName>
    <label>U.P.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOLSA</fullName>
            </value>
            <value>
                <fullName>CAJA</fullName>
            </value>
            <value>
                <fullName>CAJAS</fullName>
            </value>
            <value>
                <fullName>ENVASE</fullName>
            </value>
            <value>
                <fullName>EQUIPO</fullName>
            </value>
            <value>
                <fullName>ESTUCHE</fullName>
            </value>
            <value>
                <fullName>FRASCO</fullName>
            </value>
            <value>
                <fullName>JUEGO</fullName>
            </value>
            <value>
                <fullName>KIT</fullName>
            </value>
            <value>
                <fullName>PAQUETE</fullName>
            </value>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>PIEZA</fullName>
            </value>
            <value>
                <fullName>PRUEBAS</fullName>
            </value>
            <value>
                <fullName>ROLLO</fullName>
            </value>
            <value>
                <fullName>VIAL</fullName>
            </value>
            <value>
                <fullName>#N/D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>