unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>BP_Product_Code__c</columns>
    <columns>Product_Code_ID__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Cat_Product_Id__c</columns>
    <columns>Description__c</columns>
    <columns>Enable__c</columns>
    <columns>Fraction__c</columns>
    <columns>Package_Capacity__c</columns>
    <columns>Partida_Presupuestal__c</columns>
    <columns>Programa__c</columns>
    <columns>Sicora_Classification__c</columns>
    <columns>Simple_Classification__c</columns>
    <columns>Subalmacen__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>