unpackaged/main/default/objects/Product2/listViews/Products_A.listView-meta.xml
<ListView>
    <fullName>Products_A</fullName>
    <columns>Product_Code_ID__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Programa__c</columns>
    <columns>Subalmacen__c</columns>
    <columns>Description__c</columns>
    <columns>Sicora_Classification__c</columns>
    <columns>Simple_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programa__c</field>
        <operation>equals</operation>
        <value>Claves DPN</value>
    </filters>
    <label>Products - A</label>
</ListView>